tests/paczka1/small_fuzzy/75720903.err
Error in line 3: AKTYx S413 80,0
Error in line 1: 79g S993 85,5
